fix CSS for navbar collapse

--- a/qiita_pet/static/css/style.css
+++ b/qiita_pet/static/css/style.css
@@ -14,8 +14,7 @@
     display: block;
  }
 
- .topfloat
-  {
+ .topfloat{
     position: fixed;
     padding-top: 5px;
     height:55px;
@@ -24,3 +23,42 @@
     background:white;
     width:100%;
   }
+
+/* Make the navbar collapse at medium size, not small.
+Fixes really ugly middle ground where menu stacking occurs */
+@media (max-width: 991px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .navbar-text {
+        float: none;
+        margin: 15px 0;
+    }
+    /* since 3.1.0 */     .navbar-collapse.collapse.in {
+         display: block!important;
+    }
+    .collapsing {
+        overflow: hidden!important;
+    }
+}
